--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,11 @@ build==0.10.0
 CacheControl==0.12.14
 certifi==2023.7.22
 charset-normalizer==3.2.0
-cleo==2.0.1
+cleo==2.0.1pip install -U --pre aiogram -r requirements.txt
 colorama==0.4.6
 crashtest==0.4.1
 distlib==0.3.7
-Django==4.0
+Django==4.0.0
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 dulwich==0.21.5
