--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiofiles==23.1.0
+aiogram==3.0.0rc1
 aiohttp==3.8.5
 aiosignal==1.3.1
 annotated-types==0.5.0
@@ -14,6 +15,7 @@ cleo==2.0.1
 colorama==0.4.6
 crashtest==0.4.1
 distlib==0.3.7
+Django==4.0
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 dulwich==0.21.5
