--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ dj-database-url = "^2.0.0"
 psycopg2-binary = "^2.9.7"
 gunicorn = "^21.2.0"
 pydantic = "^2.1.1"
+aiogram = "3.0.0rc1"
+pillow = "^10.0.0"
+psycopg2 = "^2.9.7"
+pydantic-settings = "^2.0.2"
+python-dotenv = "^1.0.0"
+requests = "^2.31.0"
 
 
 [build-system]
