--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ psycopg2 = "^2.9.7"
 pydantic-settings = "^2.0.2"
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
