--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pydantic-settings = "^2.0.2"
 python-dotenv = "^1.0.0"
 requests = "^2.31.0"
 djangorestframework = "^3.14.0"
+django-cors-headers = "^4.2.0"
 
 
 [build-system]
