--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,35 @@
+aiofiles==23.1.0
+aiogram==3.0.0rc1
+aiohttp==3.8.5
+aiosignal==1.3.1
 annotated-types==0.5.0
 asgiref==3.7.2
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
 dj-database-url==2.0.0
 Django==4.2.4
+django-cors-headers==4.2.0
+djangorestframework==3.14.0
+frozenlist==1.4.0
 gunicorn==21.2.0
+idna==3.4
+magic-filter==1.0.11
+multidict==6.0.4
 packaging==23.1
+Pillow==10.0.0
+psycopg2==2.9.7
 psycopg2-binary==2.9.7
 pydantic==2.1.1
+pydantic-settings==2.0.2
 pydantic_core==2.4.0
+python-dotenv==1.0.0
+pytz==2023.3
+requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
+urllib3==2.0.4
+whitenoise==6.5.0
+yarl==1.9.2
