--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,20 @@ annotated-types==0.5.0
 asgiref==3.7.2
 async-timeout==4.0.2
 attrs==23.1.0
+boto==2.49.0
+boto3==1.28.40
+botocore==1.31.40
 certifi==2023.7.22
 charset-normalizer==3.2.0
 dj-database-url==2.0.0
 Django==4.2.4
 django-cors-headers==4.2.0
+django-storages==1.14
 djangorestframework==3.14.0
 frozenlist==1.4.0
 gunicorn==21.2.0
 idna==3.4
+jmespath==1.0.1
 magic-filter==1.0.11
 multidict==6.0.4
 packaging==23.1
@@ -24,13 +29,15 @@ psycopg2-binary==2.9.7
 pydantic==2.1.1
 pydantic-settings==2.0.2
 pydantic_core==2.4.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
+s3transfer==0.6.2
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.7.1
 tzdata==2023.3
-urllib3==2.0.4
+urllib3==1.26.16
 whitenoise==6.5.0
 yarl==1.9.2
-boto==2.49.0
